--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "@types/react-transition-group": "^4.4.5",
     "classnames": "^2.3.2",
     "i": "^0.3.7",
     "npm": "^8.19.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.55.0",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
